--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         hr {
             border: 1px solid #CECECE;
-            margin: 20px 0;
+            margin: 16px 0;
         }
 
         .span1 {
@@ -44,7 +44,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 20px;
+            margin: 16px 0 0 0;
             gap: 15px;
         }
 
@@ -52,12 +52,11 @@
             text-align: center;
             background-color: #ffffff;
             border: 1px solid #E5E5E5;
-            padding: 6px;
             border-radius: 8px;
             align-items: center;
-            margin: 10px;
+            padding: 8px 0 0 0;
             cursor: pointer;
-            width: 150px;
+            width: 140px;
             transition: 0.14s;
         }
 
@@ -115,7 +114,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1m0ROZ22YtpiZSdayw0cm3CP_-tNJ3AhJ/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Remini.webp" alt="Logo1" width="100px" height="100px">
+                    <img src="Remini.webp" alt="Logo1" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Remini</h1>
@@ -124,7 +124,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1UWWrc1UyuKg85VBg-5p8g7tIH6c39BJV/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Picsart.webp" alt="Logo2" width="100px" height="100px">
+                    <img src="Picsart.webp" alt="Logo2" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Picsart</h1>
@@ -133,7 +134,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1Yqxm_bQJ5m8-Ig1-wrDFkdk7gjASh3qo/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Adobe Lightroom.webp" alt="Logo3" width="100px" height="100px">
+                    <img src="Adobe Lightroom.webp" alt="Logo3" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Adobe Lightroom</h1>
@@ -142,7 +144,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1YZ4yQk92z0ImV3Pc42f1hf_E1lOhP-8A/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Capcut.webp" alt="Logo4" width="100px" height="100px">
+                    <img src="Capcut.webp" alt="Logo4" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Capcut</h1>
@@ -151,7 +154,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1NmUqekmeAeXQ9qnkx3J4gePVN-2lpmxP/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Snapseed.webp" alt="Logo5" width="100px" height="100px">
+                    <img src="Snapseed.webp" alt="Logo5" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Snapseed</h1>
@@ -160,7 +164,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1eRzo6BtlPIHlGL_uYtVV_SD20vlsaUvK/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Trebedit.webp" alt="Logo6" width="100px" height="100px">
+                    <img src="Trebedit.webp" alt="Logo6" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Trebedit</h1>
@@ -169,7 +174,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1N4FYGCZ1PjH-94RAW_nSpyRIe9zk0C-7/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Pydroid 3.webp" alt="Logo7" width="100px" height="100px">
+                    <img src="Pydroid 3.webp" alt="Logo7" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Pydroid 3</h1>
@@ -178,7 +184,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/13SfUc87FN8PUPnJa2PUwjHOKmVikxwga/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Mt Manager.webp" alt="Logo8" width="100px" height="100px">
+                    <img src="Mt Manager.webp" alt="Logo8" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Mt Manager</h1>
@@ -187,7 +194,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1v60dOXRGyIAziBHmqzxPAh0Rj4SRsR7k/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="GameKey.webp" alt="Logo9" width="100px" height="100px">
+                    <img src="GameKey.webp" alt="Logo9" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Game Helper</h1>
@@ -203,7 +211,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1xuVQDHAicClm7dlPksBxW9H0EWcaOxhe/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="FlexiOptimizerIYR.webp" alt="LogoIYR1" width="100px" height="100px">
+                    <img src="FlexiOptimizerIYR.webp" alt="LogoIYR1" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>FlexiOptimizer</h1>
@@ -212,7 +221,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1DQKPq2eJuIZsgwke44dnfgfHcoWHHO2P/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="ColorHex.webp" alt="LogoIYR3" width="100px" height="100px">
+                    <img src="ColorHex.webp" alt="LogoIYR3" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>ColorHex</h1>
@@ -221,7 +231,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="exam.webp" alt="LogoIYR2" width="100px" height="100px">
+                    <img src="exam.webp" alt="LogoIYR2" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Synthèse 1</h1>
@@ -230,7 +241,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1wTRr_tvE3q9eFCNulK8fOcwVJ1Azfq6l/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="cstrike.webp" alt="LogoIYR3" width="100px" height="100px">
+                    <img src="cstrike.webp" alt="LogoIYR3" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>Counter-Strike 1.6</h1>
@@ -239,7 +251,8 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1j8BXk8NstSl3C-rDBOgmdmRlP6LZci3l/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="FileOptimizer.webp" alt="LogoIYR4" width="100px" height="100px">
+                    <img src="FileOptimizer.webp" alt="LogoIYR4" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
                     <h1>FileOptimizer</h1>
